--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@heroicons/react": "^2.2.0",
     "next": "15.2.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
