Add Achievement section

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^12.4.10",
     "next": "15.2.1",
     "react": "^19.0.0",
+    "react-animated-numbers": "^1.0.0",
     "react-dom": "^19.0.0",
     "react-type-animation": "^3.2.0",
     "resend": "^4.1.2"
